--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "random-user": "^2.0.2"
   }
 }
